k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress-app
  labels:
    name: wordpress-app
