k8s/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-service-db
  namespace: wordpress-app
spec:
  selector:
    app: mariadb
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
