k8s/wp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-service-wp
  namespace: wordpress-app
spec:
  selector:
    app: wordpress
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
