k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: wordpress-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: wordpress.handbyhand.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cluster-ip-service-wp
            port:
              number: 8080
